--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <type>jar</type>
+        </dependency>
 	</dependencies>
 
 	<build>
