Frontend: pequeñas modificaciones _ Backend: Test Unitarios clases: Planet y Star

--- a/Backend/log4j_Test.properties
+++ b/Backend/log4j_Test.properties
@@ -5,7 +5,7 @@ log4j.rootLogger = DEBUG, FILE
 log4j.appender.FILE=org.apache.log4j.FileAppender
 
 # Conﬁgurar el nombre del ﬁchero
-log4j.appender.FILE.File=Messages_Proyecto.html
+log4j.appender.FILE.File=Messages_Test.html
 
 # Conﬁgurar el InmediateFlush en verdadero
 log4j.appender.FILE.ImmediateFlush=true
